# BlankMat

./: .gitignore  BlankMat.lnk  BlankMat.sln  BlankMat.vcxproj  BlankMat.vcxproj.filters  CMakeLists.txt  Doxyfile  LICENSE  LICENSE.md  README.md  config.txt  sonar-project.properties
cmake/: FindASSIMP.cmake  FindImGui.cmake
configs/: config.json  config.json.sample  hotkeys.json  materials.json  shaders.json
docs/: action_node_8h_source.html  action_stack_8h_source.html  add_value_command_8h_source.html  annotated.html  annotated_dup.js  blank_mat_config_8h_source.html  camera_8h_source.html  camera_container_8h_source.html  change_value_command_8h_source.html  class_action_stack-members.html  class_action_stack.html  class_action_stack.js  class_add_value_command-members.html  class_add_value_command.html  class_add_value_command.js  class_add_value_command__coll__graph.md5  class_add_value_command__inherit__graph.map  class_camera-members.html  class_camera.html  class_camera.js  class_camera__coll__graph.dot  class_camera__inherit__graph.dot  class_camera_container-members.html  class_camera_container.html  class_camera_container.js  class_camera_container__coll__graph.dot  class_camera_container__coll__graph.map  class_camera_container__coll__graph.md5  class_camera_container__inherit__graph.dot  class_camera_container__inherit__graph.map  class_camera_container__inherit__graph.md5  class_change_value_command-members.html  class_change_value_command.html  class_change_value_command.js  class_change_value_command__coll__graph.map  class_change_value_command__inherit__graph.md5  class_commands-members.html  class_commands.html  class_config-members.html  class_config.html  (+714 more)
docs/html/: camera_8h.html  camera_8h.js  camera_8h__dep__incl.map  camera_8h__dep__incl.md5  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  class_camera.html  class_camera.js  class_config-members.html  class_config.html  class_config_reader-members.html  class_config_reader.html  class_file_system.html  class_g_u_i_debug_tools_window-members.html  class_g_u_i_debug_tools_window.html  class_g_u_i_debug_tools_window__inherit__graph.md5  class_g_u_i_material_viewer.html  class_g_u_i_material_viewer__coll__graph.map  class_g_u_i_menu_bar_window.html  class_g_u_i_menu_bar_window.js  class_g_u_i_menu_bar_window__inherit__graph.map  class_i_entity.html  class_i_entity__inherit__graph.map  class_i_g_u_i_window.html  class_i_mesh.html  class_i_mesh.js  class_i_mesh__coll__graph.md5  class_i_mesh__inherit__graph.md5  class_i_primitive-members.html  class_i_primitive.html  class_i_scene.html  class_i_scene__coll__graph.map  class_i_scene__inherit__graph.map  class_i_tool-members.html  class_i_tool.html  class_i_tool.js  class_i_tool__inherit__graph.md5  class_light-members.html  class_light.html  (+426 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  (+32 more)
include/glad/: glad.h
models/: castle.mtl  testCube.mtl  venus.mtl
resources/: .gitignore
resources/models/: al.mtl  alTri.mtl  couch.mtl  cube.mtl  cube_tri.mtl
resources/shaders/: blinnDefaultShader.frag  blinnFlatShader.frag  blinnFlatShader.vert  defaultShader.frag  defaultShader.vert  flat.frag  flatShader.frag  gouraudShader.frag  gouraudShader.geom  gouraudShader.vert  lambertDefaultShader.frag  lambertDefaultShader.vert  lambertFlatShader.frag  lambertFlatShader.vert  lightCube.frag  lightCube.vert  line.frag  lit.frag  pbrShader.vert  phongDefaultShader.frag  phongDefaultShader.vert  phongFlatShader.frag  phongFlatShader.vert  phongShader.frag  phongShader.geom  phongShader.vert  shadowMappingDepth.vert  textured.frag  unlit.frag  wireframe.frag
shaders/: gouraudShader.frag  phongShader.frag  phongShader.geom
src/: BlankMat - Shortcut.lnk  blankMatConfig.h  camera.cpp  camera.h  cube.h  dataMaterial.h  drawable.h  entity.h  face.cpp  face.h  fileHelper.cpp  fileHelper.h  glIncludes.h  glad.c  grid.h  iLight.h  imesh.h  indexStructs.cpp  indexStructs.h  input.cpp  input.h  iprimitive.h  iscene.h  itriangle.cpp  itriangle.h  light.cpp  light.h  lightCube.cpp  lightCube.h  line.h  loadShader.cpp  loadShader.h  lodepng.cpp  lodepng.h  main.cpp  main.h  material.cpp  material.h  materialStorage.cpp  materialStorage.h  (+59 more)
src/containers/: cameraContainer.h  entityContainer.h  lightContainer.h  materialContainer.h  meshContainer.h  shaderContainer.h  textureContainer.h
src/files/: config.cpp  config.h  configReader.h  fileOperations.h  fileSystem.h  modelReader.h  modelWriter.h  sceneIO.h  sceneReader.cpp  sceneReader.h  sceneWriter.cpp  sceneWriter.h
src/interaction/: actionNode.h  actionStack.h  addValueCommand.h  changeValueCommand.h  commands.h  enableValueCommand.h  input.cpp  input.h  newinput.cpp  newinput.h  oldinput.cpp  oldinput.h  redoCommand.h  runFunctionCommand.h  runToggleFunctionCommand.h  selection.cpp  selection.h  state.h  undoCommand.h
src/interfaces/: iCommand.h  iContainer.h  iEntity.h  iGUIContainerWindow.h  iGUIWindow.h  iMaterial.h  iMesh.h  iNameable.h  iPrimitive.h  iScene.cpp  iScene.h  iSelectable.h  iTool.h  iUIVariable.h  iWritable.h
src/primitives/: pCube.h  pGrid.h  pHandle.h  pLightCube.h  pLine.h  pPlane.h  pWireCube.h  vCube.h  vPlane.h
src/rendering/: camera.h  iEntity.h  iLight.h  iMaterial.h  iMesh.h  iPrimitive.h  iScene.h  light.h  material.cpp  material.h  mesh.cpp  mesh.h  modelMesh.cpp  modelMesh.h  modelScene.cpp  modelScene.h  node.cpp  node.h  scene.cpp  scene.h  sceneNode.h  shader.cpp  shader.h  texture.h  vertex.h
src/tools/: iTool.h  selectTool.cpp  selectTool.h  state.h
src/unitTests/: selectionTest.h
src/windows/: guiActionList.h  (+19 more)
(+76 files in other folders)
